--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Recent graduate in Electronics and Communication Engineering from Karunya Institute of Technology and Sciences. I completed an internship at LTIMindtree, gaining hands-on experience with realtime projects. At Cognizant Technology Solutions, I developed a Full-stack e-commerce web application. Currently a Software Engineer, I'm eager to explore new opportunities and exciting projects. Let’s connect!</p>
+								<p>Started my journey as an intern at LTIMindtree, where I gained hands-on experience in Python, MySQL, Java, Pandas, and NumPy. Currently, I am working as a Full-Stack Java Developer at Cognizant Technology Solutions, with 1 year and 6 months of hands-on experience in designing, developing, and maintaining scalable web applications. Proficient in both front-end and back-end technologies, I am passionate about solving business challenges through innovative software solutions. Let’s connect!</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Full stack Java Developer</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology at Karunya University, Coimbatore</span></li>
