--- a/index.html
+++ b/index.html
@@ -324,9 +324,11 @@
 						<span class="position">Cognizant Technology Solutions</span>
 						<p class="mt-4">Cognizant Technology Solutions (CTS) is a multinational technology company that provides IT services, including digital, technology, consulting, and operations services.
 							<ul>
-								<li>Developed a full-stack web application during training, enhancing my skills in software development and project execution.</li>
-								<li>Gained proficiency in Advanced Java, Spring Boot, and AngularJS, contributing to robust application design.</li>
-								<li>Currently working in production support, handling incident management, Slack monitoring, and resolving technical issues by analyzing server logs and data.</li>
+								<li>Worked on real-time full-stack web applications for enterprise clients.</li>
+<li>Developed scalable REST APIs using Spring Boot and dynamic UIs with AngularJS.</li>
+<li>Gained hands-on experience in Advanced Java, Spring Boot, and AngularJS.</li>
+<li>Contributed to end-to-end development including coding, debugging, and deployment.</li>
+
 								
 							</ul>
 						</p>
@@ -342,7 +344,7 @@
 						<p class="mt-4">LTIMindtree Limited is an Indian multinational information technology services and consulting company based in Mumbai. A subsidiary of Larsen & Toubro, the company was incorporated in 1996 and employs more than 81,000 people. 
 							<ul>
 								<li>Worked on real-time projects, contributing to the development and deployment of innovative solutions.</li>
-								<li>Acquired skills in Python, MySQL, Java, Pandas, NumPy, and Convolutional Neural Networks (CNN).</li>
+								<li>Acquired skills in Python, MySQL, Java, Pandas, NumPy.</li>
 								<li>Collaborated with cross-functional teams to enhance software functionality and user experience.</li>
 								
 							</ul>
