--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Emerging Software Engineer with 1 year of experience in developing full-stack applications and production support.I am passionate about leveraging technology to solve real-world problems and drive innovation.</p>
+            <p>Emerging Software Engineer with 1.5 years of experience in developing full-stack applications and production support.I am passionate about leveraging technology to solve real-world problems and drive innovation.</p>
           </div>
         </div>
 
